--- a/src/devildex/theming/sphinx/devildex_sphinx_theme/layout.html
+++ b/src/devildex/theming/sphinx/devildex_sphinx_theme/layout.html
@@ -9,7 +9,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark devildex-top-bar">
       <div class="container-fluid">
         {# Titolo del Progetto (preso da Sphinx) che linka alla pagina principale #}
-        <a class="navbar-brand" href="{{ pathto(master_doc) }}">{{ project }}</a>
+        <a class="navbar-brand" href="{{ pathto(master_doc) }}">
+          <img src="{{ pathto('_static/imgs/logo.jpg', 1) }}" alt="{{ project }} Logo" style="height: 30px; width: auto; margin-right: 10px; vertical-align: middle;">
+          
+          {{ project }}</a>
         
         {# Se in futuro vorrai aggiungere link di navigazione che collassano su mobile, avrai bisogno di un toggler.
            Per ora, se c'è solo il titolo, potrebbe non essere strettamente necessario, ma è buona norma includerlo
