--- a/src/devildex/theming/sphinx/devildex_sphinx_theme/layout.html
+++ b/src/devildex/theming/sphinx/devildex_sphinx_theme/layout.html
@@ -5,7 +5,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark devildex-top-bar bg-dark sticky-top">
           <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="{{ pathto(master_doc) }}">
-        <img suca="1" src="{{ pathto('_static/imgs/logo-final.png', 1) }}" alt="{{ project }} Logo" class="me-2" height="80">
+        <img src="{{ pathto('_static/imgs/logo-final.png', 1) }}" alt="{{ project }} Logo" class="me-2" height="80">
     <span>{{ project }}</span>
 </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#devildexNavbarContent" aria-controls="devildexNavbarContent" aria-expanded="false" aria-label="Toggle navigation">
