remove extra stuff from home

--- a/src/devildex/theming/sphinx/devildex_sphinx_theme/layout.html
+++ b/src/devildex/theming/sphinx/devildex_sphinx_theme/layout.html
@@ -1,5 +1,7 @@
 {%- extends "basic/layout.html" %}
-
+{%- block body_tag %}
+<body class="page-{{ pagename|replace('/', '-') }}">
+{%- endblock %}
 {%- block header %}
 <nav class="navbar navbar-expand-lg navbar-dark devildex-top-bar bg-dark sticky-top">
     <div class="container-fluid">
