scroll sidebar, change sidebar title style

--- a/src/devildex/theming/sphinx/devildex_sphinx_theme/layout.html
+++ b/src/devildex/theming/sphinx/devildex_sphinx_theme/layout.html
@@ -51,8 +51,7 @@
                    aria-label="Main navigation">
                 {# MODIFICATO: Aggiunta la struttura della card Bootstrap #}
                 <div class="devildex-sidebar-wrapper card border-dark">
-                    <div class="card-header bg-dark text-white">
-                        {# MODIFICATO: Usiamo il sistema di traduzione di Sphinx #}
+                    <div class="card-header bg-light text-dark">
                         <h5 class="card-title mb-0">{% trans %}Navigation{% endtrans %}</h5>
                     </div>
                     <div class="card-body p-2 bg-light">
