--- a/src/devildex/theming/devildex_pydoctor_theme/header.html
+++ b/src/devildex/theming/devildex_pydoctor_theme/header.html
@@ -1,4 +1,4 @@
-<div> <!-- Questo è l'elemento radice che racchiude tutto -->
+<div>
 
     <nav class="navbar navbar-expand-lg navbar-dark devildex-top-bar bg-dark sticky-top">
         <div class="container-fluid">
