--- a/src/examples/index.html
+++ b/src/examples/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project - Pagina Esempio</title>
-    <!-- Bootstrap CSS (CDN) -->
+    <title>My Project - Example Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Eventuale CSS personalizzato -->
     <style>
         body {
             display: flex;
@@ -17,165 +15,161 @@
             margin-top: auto;
         }
         .sphinxsidebar {
-            /* Stile per rendere la sidebar "sticky" come nell'originale */
-            top: 5rem; /* Adatta questo valore se l'altezza della navbar cambia */
-            height: calc(100vh - 5rem); /* Esempio per altezza sidebar */
+            top: 5rem;
+            height: calc(100vh - 5rem);
             overflow-y: auto;
         }
         .devildex-top-bar .navbar-brand img {
-            max-height: 60px; /* Ridotto per adattarsi meglio senza CSS specifici */
+            max-height: 60px;
             height: auto;
         }
     </style>
 </head>
 <body>
 
-    <!-- Header con Navbar Bootstrap -->
-    <nav class="navbar navbar-expand-lg navbar-dark devildex-top-bar bg-dark sticky-top">
-      <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-dark devildex-top-bar bg-dark sticky-top">
+    <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-            <!-- Assicurati che il percorso del logo sia corretto -->
             <img src="_static/imgs/logo-final.png" alt="My Project Logo" class="me-2" height="80">
             <span>My Project</span>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#devildexNavbarContent" aria-controls="devildexNavbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#devildexNavbarContent"
+                aria-controls="devildexNavbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="devildexNavbarContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!-- Esempio di voci di menu (sostituisce globaltoc) -->
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="pagina1.html">Guida Introduttiva</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="pagina2.html">API Reference</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Altro
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="altro1.html">Sezione A</a></li>
-                <li><a class="dropdown-item" href="altro2.html">Sezione B</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="contatti.html">Contatti</a></li>
-              </ul>
-            </li>
-          </ul>
-          <!-- Barra di ricerca (visibile se non siamo sulla pagina di ricerca) -->
-          <form class="d-flex ms-auto" role="search" action="search.html" method="get">
-            <input class="form-control me-2" type="search" name="q" placeholder="Cerca documenti..." aria-label="Search">
-            <input type="hidden" name="check_keywords" value="yes">
-            <input type="hidden" name="area" value="default">
-            <button class="btn btn-outline-light" type="submit">Cerca</button>
-          </form>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pagina1.html">Guide Introduttiva</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pagina2.html">API Reference</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Other
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="altro1.html">Section A</a></li>
+                        <li><a class="dropdown-item" href="altro2.html">Section B</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="contatti.html">Contacts</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex ms-auto" role="search" action="search.html" method="get">
+                <input class="form-control me-2" type="search" name="q" placeholder="Search documents..."
+                       aria-label="Search">
+                <input type="hidden" name="check_keywords" value="yes">
+                <input type="hidden" name="area" value="default">
+                <button class="btn btn-outline-light" type="submit">Cerca</button>
+            </form>
         </div>
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <!-- Contenuto Principale -->
-    <main role="main" class="container mt-4 mb-4">
-        <div class="row">
-            <!-- Colonna per il contenuto principale (più larga perché la sidebar è presente) -->
-            <div class="col-lg-9 col-md-8">
-                <!-- Qui andrebbe il contenuto della pagina specifica (blocco 'body') -->
-                <h1>Titolo della Pagina Esempio</h1>
-                <p>Questo è un paragrafo di esempio per il contenuto principale della pagina. Qui Sphinx inserirebbe il contenuto renderizzato dai file sorgente (es. reStructuredText o Markdown).</p>
+<main role="main" class="container mt-4 mb-4">
+    <div class="row">
+        <div class="col-lg-9 col-md-8">
+            <h1>Example Page Title</h1>
+            <p>Questo è un paragrafo di esempio per il contenuto principale della pagina. Qui Sphinx inserirebbe il
+                contenuto renderizzato dai file sorgente (es. reStructuredText o Markdown).</p>
 
-                <h2>Sottotitolo</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <ul>
-                    <li>Elemento lista 1</li>
-                    <li>Elemento lista 2</li>
-                    <li>Elemento lista 3</li>
-                </ul>
-                <pre><code># Esempio di blocco codice
+            <h2>Subtitle</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            <ul>
+                <li>Elemento lista 1</li>
+                <li>Elemento lista 2</li>
+                <li>Elemento lista 3</li>
+            </ul>
+            <pre><code># Esempio di blocco codice
 def hello_world():
     print("Hello, World!")
                 </code></pre>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-
-            <!-- Colonna per la sidebar (visibile perché non siamo su index o search) -->
-            <div class="col-lg-3 col-md-4">
-                <aside class="sphinxsidebar position-sticky" style="top: 5rem;" role="navigation" aria-label="Main navigation">
-                    <div class="sphinxsidebarwrapper pt-3">
-                        <!-- Blocco Logo Sidebar (se presente) -->
-                        <div class="sidebar-block">
-                            <!-- <img src="_static/imgs/logo-sidebar.png" alt="Logo Sidebar" class="img-fluid mb-3"> -->
-                            <h5 class="ms-3">Logo Sidebar</h5>
-                            <hr>
-                        </div>
-
-                        <!-- Blocco TOC Locale (sidebartoc) -->
-                        <div class="sidebar-block">
-                            <h5 class="ms-3">In questa pagina</h5>
-                            <ul class="nav flex-column ms-3">
-                                <li class="nav-item"><a href="#sottotitolo1" class="nav-link">Sottotitolo 1</a></li>
-                                <li class="nav-item"><a href="#sottotitolo2" class="nav-link">Sottotitolo 2</a></li>
-                                <li class="nav-item"><a href="#sottotitolo3" class="nav-link">Sottotitolo 3</a></li>
-                            </ul>
-                            <hr>
-                        </div>
-
-                        <!-- Blocco Link Correlati (sidebarrel) -->
-                        <div class="sidebar-block">
-                            <h5 class="ms-3">Link Utili</h5>
-                            <ul class="nav flex-column ms-3">
-                                <li class="nav-item"><a href="pagina_precedente.html" class="nav-link">Pagina Precedente</a></li>
-                                <li class="nav-item"><a href="pagina_successiva.html" class="nav-link">Pagina Successiva</a></li>
-                            </ul>
-                            <hr>
-                        </div>
-
-                        <!-- Blocco Link Sorgente (sidebarsourcelink) -->
-                        <div class="sidebar-block">
-                            <h5 class="ms-3">Sorgente</h5>
-                            <ul class="nav flex-column ms-3">
-                                <li class="nav-item"><a href="#" class="nav-link">Mostra Sorgente</a></li>
-                            </ul>
-                            <hr>
-                        </div>
-
-                        <!-- Blocco Ricerca Sidebar (sidebarsearch) -->
-                        <div class="sidebar-block p-3">
-                            <h5 class="mb-3">Cerca nel sito</h5>
-                            <form class="d-flex" role="search" action="search.html" method="get">
-                                <input class="form-control me-2" type="search" name="q" placeholder="Cerca..." aria-label="Search">
-                                <button class="btn btn-sm btn-outline-secondary" type="submit">Vai</button>
-                            </form>
-                        </div>
-                    </div>
-                </aside>
-            </div>
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</p>
         </div>
-    </main>
 
-    <!-- Footer -->
-    <footer class="footer mt-auto py-3 bg-dark text-light border-top">
-      <div class="container">
+        <div class="col-lg-3 col-md-4">
+            <aside class="sphinxsidebar position-sticky" style="top: 5rem;" role="navigation"
+                   aria-label="Main navigation">
+                <div class="sphinxsidebarwrapper pt-3">
+                    <div class="sidebar-block">
+                        <h5 class="ms-3">Logo Sidebar</h5>
+                        <hr>
+                    </div>
+
+                    <div class="sidebar-block">
+                        <h5 class="ms-3">In questa pagina</h5>
+                        <ul class="nav flex-column ms-3">
+                            <li class="nav-item"><a href="#sottotitolo1" class="nav-link">Sottotitolo 1</a></li>
+                            <li class="nav-item"><a href="#sottotitolo2" class="nav-link">Sottotitolo 2</a></li>
+                            <li class="nav-item"><a href="#sottotitolo3" class="nav-link">Sottotitolo 3</a></li>
+                        </ul>
+                        <hr>
+                    </div>
+
+                    <div class="sidebar-block">
+                        <h5 class="ms-3">Link Utili</h5>
+                        <ul class="nav flex-column ms-3">
+                            <li class="nav-item"><a href="pagina_precedente.html" class="nav-link">Pagina Precedente</a>
+                            </li>
+                            <li class="nav-item"><a href="pagina_successiva.html" class="nav-link">Pagina Successiva</a>
+                            </li>
+                        </ul>
+                        <hr>
+                    </div>
+
+                    <div class="sidebar-block">
+                        <h5 class="ms-3">Source</h5>
+                        <ul class="nav flex-column ms-3">
+                            <li class="nav-item"><a href="#" class="nav-link">Show Source</a></li>
+                        </ul>
+                        <hr>
+                    </div>
+
+                    <div class="sidebar-block p-3">
+                        <h5 class="mb-3">Cerca nel sito</h5>
+                        <form class="d-flex" role="search" action="search.html" method="get">
+                            <input class="form-control me-2" type="search" name="q" placeholder="Cerca..."
+                                   aria-label="Search">
+                            <button class="btn btn-sm btn-outline-secondary" type="submit">Vai</button>
+                        </form>
+                    </div>
+                </div>
+            </aside>
+        </div>
+    </div>
+</main>
+
+<!-- Footer -->
+<footer class="footer mt-auto py-3 bg-dark text-light border-top">
+    <div class="container">
         <div class="row">
             <div class="col-12 text-center">
                 <small>
-                    &#169; <a href="copyright.html" class="text-light">Copyright</a> 2024, Nome Autore.
+                    &#169; <a href="copyright.html" class="text-light">Copyright</a> 2024, Author Name.
                     <br/>
-                    Ultimo aggiornamento il 28 Maggio 2024.
+                    Ultimo aggiornamento il 28 May 2024.
                     <br/>
-                    Creato usando <a href="https://www.sphinx-doc.org/" class="text-light">Sphinx</a> 7.x.x.
+                    Created using <a href="https://www.sphinx-doc.org/" class="text-light">Sphinx</a> 7.x.x.
                 </small>
             </div>
         </div>
-      </div>
-    </footer>
+    </div>
+</footer>
 
-    <!-- Bootstrap JS Bundle (include Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Eventuale JS personalizzato -->
-    <script src="_static/js/devildex.js"></script>
-    <!-- Qui Sphinx includerebbe altri script come searchtools.js -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="_static/js/devildex.js"></script>
 
 </body>
 </html>
